tests/neg-custom-args/captures/i23207.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23207.scala:15:17 ---------------------------------------
15 |  val a: A = box.x // error
   |             ^^^^^
   |             Found:    (box.x : (b : B^{io})^{b})
   |             Required: A
   |
   |             Note that capability `io` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23207.scala:18:13 ---------------------------------------
18 |  val _: A = c // error
   |             ^
   |             Found:    (c : B^{b})
   |             Required: A
   |
   |             Note that capability `b` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23207.scala:19:2 ----------------------------------------
19 |  c // error
   |  ^
   |  Found:    A^{c}
   |  Required: A
   |
   |  Note that capability `c` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i23207.scala:27:2 ----------------------------------------
27 |  c  // error
   |  ^
   |  Found:    A^{c}
   |  Required: A
   |
   |  Note that capability `c` is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
